[Enhancement] Merge commit supports information_schema.loads (#67879)
Signed-off-by: PengFei Li <lpengfei2016@gmail.com>
(cherry picked from commit 70a904c147e398b27825b413e22ca9b8d7d4959d)